# kohonen3d

./: CMakeLists.txt  README.md
data/: Ethiopic_MNIST_y_test.npy  Ethiopic_MNIST_y_train.npy
src/: KohonenNetwork.cpp  KohonenNetwork.h  MNISTLoader.cpp  MNISTLoader.h  Metrics.cpp  Metrics.h  NpyLoader.cpp  NpyLoader.h  Renderer.cpp  Renderer.h
